--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -1,16 +1,28 @@
 nav{
     background-color: black;
     height: 100px;
+	justify-content: center;
+    display: flex;
     
 }
 
 .flex{
+    width: 60%;
     display: flex;
-    justify-content: space-between;
-    justify-content:flex-end;
-    align-items: center;
+    margin: auto;
+    flex-direction: row-reverse;
+    justify-content: center;
+    margin-left: 60%;
+    
 
 }
+.flex-child{
+    margin: auto 10px;
+    align-items: center;
+    
+    
+}
+
 .navbar div a {
     
     color: #ffffff; /* Couleur noire */
